--- a/SightsAndSounds.WebAPI/SightsAndSounds.WebAPI.csproj
+++ b/SightsAndSounds.WebAPI/SightsAndSounds.WebAPI.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SightsAndSounds.Shared\SightsAndSounds.Shared.csproj" />
   </ItemGroup>
 
 </Project>
